bcrypt ready
exit
